RMM_styles.css
 
body {
    background-color:#34495e;
    overflow:auto;
    font-family:Sans-Serif;
    font-size:1.25em;
    color:#000000;
}

/* need follow to avoid printing blank second page of problems */
@media print {
     html, body {
        border:1px solid white;
        height:99%;
        page-break-after:avoid;
        page-break-before:avoid;
        overflow:hidden;
     }
}
@page { margin:0; }

div.statslive {
  float:right;
  margin-top:-10px;
  margin-right:10px;
  font-size:0.75em;
  color:#ccc;
}

.chart {
  background:#ffe6e6;
  width:500px;
  height:100px;
  border-left:1px dotted #555;
  border-bottom:1px dotted #555;
  padding:20px 20px 20px 0;
}

.overlimit {
    fill:000;
    cursor:pointer;
}

.overlimit:hover {
    fill:#ff9900;
}

.button {
    background-color:#008000;
    font-family:Sans-Serif;
    border:none;
    color:white;
    padding:5px 10px 5px 10px;
    text-align:center;
    text-decoration:none;
    display:inline-block;
    font-size:0.9em;
    margin:4px 10px;
    cursor:pointer;
}
.button:hover{
    background-color:#0000b3;
}
.min120 {
    min-width:120px;
}
.mbutton {
    min-width:220px;
    background:#99ddff;
    font-family:Sans-Serif;
    border:none;
    color:black;
    padding:5px 10px 5px 10px;
    text-align:center;
    text-decoration:none;
    display:inline-block;
    font-size:0.9em;
    margin:4px 10px;
    border-radius:5px;
    box-shadow:0 2px 4px 0 rgba(0,0,0,0.2), 0 3px 6px 0 rgba(0,0,0,0.19);
    cursor:pointer;
}
.mbutton:hover{
    background-color:#ccb3ff;
}
.print_page_button{
    background:#fff;
    padding:5px;
    border:1px solid #aaa;
    font-size:80%;
}

.input1 {
    padding:8px;
    display:block;
    border:1px solid #444;
    width:80%;
    margin:0px auto;
    margin-top:10px;
    font-size:0.9em;
    text-align:center;
}

/*gear & name start*/
.gear {
    fill:#ebebeb;
}
.gear:hover {
    fill:#aa80ff;
}
div.name {
    color:#ebebeb;
    font-family:Sans-Serif;
    font-size:1.25em;
    font-weight:bold;
    text-align:center;
    margin-bottom:20px;
}
/*gear & name end*/


/*number_column start*/
.r2white {
    stroke:#fff;
    stroke-width:1;
    fill:#fff;
}
.d3bkgd {
    stroke:red;
    stroke-width:1;
    fill:#b3ccff;
}
.r2bkgd {
    stroke:#fff;
    stroke-width:1;
    fill:#b3ccff;
}
.number_column {
    stroke:#000000;
    stroke-width:1;
    fill:#fff;
}
.number_column_front {
    stroke:blue;
    stroke-width:2;
    fill:#b3ccff;
}
.number_column_back {
    stroke:#000000;
    stroke-width:1;
    fill:#f2f2f2;
}
/*number_column end*/

.borrow_carry {
    stroke:#000000;
    stroke-width:0.5;
    fill:#ffff80;
}
.borrow_carry_number {
    fill:#000099;
}

.placeholder {
    stroke:#000000;
    stroke-width:0.5;
    fill:#ccc;
}
.placeholder_front {
    stroke:blue;
    stroke-width:1.0;
    fill:#b3ccff;
}

.sync_note {
    padding:10px;
    font-size:0.8em;
    margin-top:10px;
    text-align:center;
}

.column_white {
    fill:#fff;
}

.answer_bkgd {
    stroke:#000000;
    stroke-width:0.5;
    fill:#56AEFF;
    opacity:1.0;
}
.answer_button {
    stroke:#000000;
    stroke-width:1;
}
.answer_button_hover {
    stroke:#ff0000;
    stroke-width:5;
}
.answer_button_hover_m2 {
    stroke:#ff0000;
    stroke-width:2;
}

svg.container {
    border:1px solid black;
    background:#fff;
}
div.container {
    display:flex;
    align-items:center;
    justify-content:center;
    padding:5px;
}
text.next {
    font-size:2.0em;
    fill:#ffffcc;
    font-family:sans-serif;
    font-weight:bold;
    opacity:0.8;
}
div.menu_info {
    margin:20px;
    padding:5px;
    background:#ffffcc;
    font-size:80%;
}
div.note {
    width:50%;
    min-width:400px;
    max-width:1000px;
    color:#000;
    font-size:1.1em;
    font-family:Sans-Serif;
    background:#ffffcc;
    opacity:1.0;
    margin:0px auto;
    text-align:center;
    padding:5px;
}
div.info {
    width:50%;
    min-width:400px;
    max-width:1000px;
    color:#000;
    font-size:1.1em;
    font-family:Sans-Serif;
    background:#e6ffff;
    opacity:1.0;
    margin:0px auto;
    text-align:center;
    padding:10px;
}
div.stats {
    width:50%;
    min-width:400px;
    max-width:1000px;
    color:#000;
    font-size:1.1em;
    font-family:Sans-Serif;
    background:#e6ffff;
    opacity:1.0;
    margin:0px auto;
    text-align:center;
    padding:10px;
}
div.test_count {
    font-size:0.7em;
    color:#aaa;
    font-family:Sans-Serif;
    margin:0px auto;
    text-align:center;
    width:100%;
}
/*blur start*/
.f0 {
  filter:url(#f0);
}
.f3 {
  filter:url(#f3);
}
div.block {
    width:100%;
    height:100%;
    background:white;
    position:absolute;
    left:0px;
    top:0px;
    zindex:1;
    opacity:0;
    display:none;
}

/*blur end*/

/*menus start*/
div.menu_text {
    font-size:85%;
}
.sync_text {
    padding:20px;
    border:1px solid #9999;
    text-align:left;
}
div.msg {
    background:#ebebeb;
    width:70%;
    padding:20px;
    text-align:left;
    margin:0px auto;
}
div.msg_text {
    font-size:85%;
}
.menu_items {
    background:#ebebeb;
    width:50%;
    min-width:360px;
    padding:10px;
    text-align:center;
    margin:0px auto;
}
.menu_help {
    background:#ebebeb;
    color:#000;
    font-size:0.8em;
    width:70%;
    font-size:1em;
    max-width:800px;
    padding:20px;
    text-align:left;
    margin:0px auto;
}
.help {
    font-size:.8em;
}
.help_hi { 
    color:blue;
}
button.print_id {
    min-width:130px;
    background:#fff;
    border:1px solid #999;
    font-size:0.75em;
    color:#000;
    text-align:center;
    text-decoration:none;
    padding:5px 10px 5px 10px;
    display:inline-block;
    cursor:pointer;
}
button.print_id:hover {
    color:#000;
    background:#ccb3ff;
}
button.stats_id {
    min-width:75%;
    background:#99ddff;
    border:1px solid #999;
    box-shadow:0 2px 4px 0 rgba(0,0,0,0.2), 0 3px 6px 0 rgba(0,0,0,0.19);
    border-radius:10px;
    font-size:0.75em;
    color:#000;
    text-align:center;
    text-decoration:none;
    padding:5px 10px 5px 10px;
    display:inline-block;
    cursor:pointer;
}
button.stats_id:hover {
    color:#000;
    background:#ccb3ff;
}
/*menus end*/
/*toggle start*/
a.toggle {
    border-radius:5px;
    box-shadow:0 2px 4px 0 rgba(0,0,0,0.2), 0 3px 6px 0 rgba(0,0,0,0.19);
    width:70%;
    background:#fff;
    border:1px solid #999;
    font-size:0.75em;
    color:#000;
    text-align:center;
    text-decoration:none;
    padding:5px 10px 5px 10px;
    display:inline-block;
    cursor:pointer;
}
a.toggle:hover {
    color:#000;
    background:#ccb3ff;
}
span.toggle_on {
 opacity:0.8;
 margin-left:10px;
 display:inline-block;
 width:15%;
 color:#fff;
 background:#2eb82e;
 font-size:80%;
 padding:3px;
 border:1px solid #444;
}
span.toggle_off {
 opacity:0.8;
 margin-left:10px;
 display:inline-block;
 width:15%;
 color:#000;
 background:#ffb3b3;
 font-size:80%;
 padding:3px;
 border:1px solid #444;
}

/*toggle end*/


button.chunk {
    background:#3333cc;
    color:#fff;
    border:1px solid #222;
    border-radius:4px;
    font-size:0.8em;
    font-weight:normal;
    line-height:1;
    padding:4px 4px 4px 4px;
    text-align:center;
}
button.chunk:hover {
    background:#191966;
    cursor:pointer;
}

button.carrynote {
    background:#3333cc;
    color:#fff;
    border:1px solid #222;
    border-radius:6px;
    font-size:1.2em;
    font-weight:normal;
    line-height:1;
    padding:6px 6px 6px 6px;
    text-align:center;
}
button.carrynote:hover {
    background:#191966;
    cursor:pointer;
}


/*M2 DV start*/
div.m2_instruction {
    width:330px;
    height:355px;
    position:absolute;
    margin-top:-310px;
    margin-left:270px;
    background:#ccffff;
    text-align:center;
    padding:5px;
}
div.d3_instruction {
    width:330px;
    height:360px;
    position:absolute;
    margin-top:-400px;
    margin-left:270px;
    background:#ccffff;
    text-align:center;
    padding:5px;
}
a.next {
    font-size:0.8em;
    padding:5px;
    color:#3333cc;
    border:1px solid #000;
    text-decoration:none;
}
a.next:hover {
    background:#fff;
    cursor:pointer;
}
 /*M2 DV end*/
 /* sync start*/
.mbutton.sync {
    background:#9ae69b;
    padding:10px;
    min-width:70%;
}
.mbutton.sync_main {
    background:#9ae69b;
}
button.link {
    background:#9ae69b;
    font-size:1em;
    border-radius:5px;
    padding:5px;
    min-width:100px;
    margin-left:10px;
}
button.link:hover {
    background:#D5F5D6;
}
button.link_edit {
    background:#99ffe6;
    min-width:100px;
    margin-left:10px;
}
a.link {
    background:#9ae69b;
}
 span.orig {
    font-size:1.25em; 
    padding-left:20px; 
    display:inline-block;
}
div.sync_orig {
    margin-top:20px;
    padding:10px;
    border:1px solid #888;
}
table.usage {
    border:1px solid #444;
    font-size:1em;
    margin:0px auto;
    text-align:center;
}
table.usage th {
    font-size:0.9em;
    color:#444;
    padding-left:5px;
    padding-right:5px;
}
table.usage tr td {
    font-size:90%;
}
span.link_name {
    color:blue;
    font-size:1.25em;
    margin-left:10px;
}
span.link_iduser {
    font-size:80%;
}
 /*sync enc*/

